--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,11 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Phân tích cảm xúc</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/47668995a9.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div>
@@ -29,7 +24,7 @@
             </nav>
         </div>
         <div class="content">
-            <img src="{{ url_for('static', filename='dashboard.png') }}" alt="">
+            <img src="{{ url_for('static', filename='dashboard.png') }}" alt=""> <!-- Dẫn tới thư mục chứa ảnh từ server trả về -->
         </div>
     </div>
 </body>
